--- a/dutyStudy/hadoop/Hadoop集群安装.ipynb
+++ b/dutyStudy/hadoop/Hadoop集群安装.ipynb
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -156,7 +158,11 @@
     "    A.修改hadoop.tmp.dir为一个新的/root/dfs/ha\n",
     "    \n",
     "    B.\n",
-    "    \n",
+    "<property>\n",
+    "  <name>hadoop.tmp.dir</name>\n",
+    "  <value>/root/dfs/ha</value>\n",
+    "</property>\n",
+    "\n",
     "<!--配置HA后,由于有多个NN,所有这里指定服务名称-->\n",
     "<property>\n",
     "  <name>fs.defaultFS</name>\n",
@@ -244,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -286,7 +294,7 @@
    "metadata": {},
    "source": [
     "### B.1 同步 主从NN 的metadata数据<a href='https://hadoop.apache.org/docs/r3.1.1/hadoop-project-dist/hadoop-hdfs/HDFSHighAvailabilityWithQJM.html#Deployment_details'>help</a>\n",
-    "    1.启动所有的journalnode节点.hdfs --daemon start journalnode\n",
+    "    1.启动所有的journalnode节点.hdfs --daemon start journalnode  //hadoop-daemon start journalnode\n",
     "    2.格式化主NN,并观察clusterID\n",
     "        hdfs namenode -format\n",
     "    3.standby NN同步主NN:在从机器上输入:\n",
@@ -316,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
