--- a/daily/8/studyOfFace/MTCNN训练步骤.ipynb
+++ b/daily/8/studyOfFace/MTCNN训练步骤.ipynb
@@ -154,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -181,6 +183,74 @@
     "img=cv2.imread('/home/zhangxk/mysite/webapp/facedb1/1.png')\n",
     "cv2.flip(img,0,img)\n",
     "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "prefix=['../data/MTCNN_model/PNet_No_Landmark/PNet', '../data/MTCNN_model/RNet_No_Landmark/RNet', '../data/MTCNN_model/ONet_No_Landmark/ONet']\n",
+    "epoch=[18,14,16]\n",
+    "model_path = ['%s-%s' % (x, y) for x, y in zip(prefix, epoch)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model_path=model_path[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../data/MTCNN_model/PNet_No_Landmark/PNet-18'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../data/MTCNN_model/PNet_No_Landmark'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " '/'.join(model_path.split('/')[:-1])"
    ]
   },
   {
