--- a/dutyStudy/hadoop/Yarn资源管理任务调度.ipynb
+++ b/dutyStudy/hadoop/Yarn资源管理任务调度.ipynb
@@ -8,7 +8,9 @@
     "## yarn由resourceManager和NodeManager组成,NodeManager分布于每个节点,\n",
     "## resourceManager汇集NodeManager提交的本地信息\n",
     "\n",
-    "<a href='https://hadoop.apache.org/docs/r3.1.1/hadoop-project-dist/hadoop-common/SingleCluster.html#YARN_on_a_Single_Node'>help</a>"
+    "<a href='https://hadoop.apache.org/docs/r3.1.1/hadoop-project-dist/hadoop-common/SingleCluster.html#YARN_on_a_Single_Node'>help</a>\n",
+    "\n",
+    "![ss](images/yarn.png)"
    ]
   },
   {
@@ -16,13 +18,14 @@
    "metadata": {},
    "source": [
     "1.基础配置,让MAP_reduce on Yarn\n",
-    "/hadoop/mapred-site.xml:\n",
-    "    <property>\n",
-    "        <name>mapreduce.framework.name</name>\n",
-    "        <value>yarn</value>\n",
-    "    </property>\n",
-    "/hadoop/yarn-site.xml:\n",
     "\n",
+    "       /hadoop/mapred-site.xml:\n",
+    "        <property>\n",
+    "            <name>mapreduce.framework.name</name>\n",
+    "            <value>yarn</value>\n",
+    "        </property>\n",
+    "        \n",
+    "    /hadoop/yarn-site.xml:\n",
     "    <property>\n",
     "        <name>yarn.nodemanager.aux-services</name>\n",
     "        <value>mapreduce_shuffle</value>\n",
@@ -48,7 +51,8 @@
    },
    "outputs": [],
    "source": [
-    "        <!--启用yarn的高可用-->\n",
+    "    /hadoop/yarn-site.xml:   \n",
+    "    <!--启用yarn的高可用-->\n",
     "    <property>\n",
     "        <name>yarn.resourcemanager.ha.enabled</name>\n",
     "        <value>true</value>\n",
