--- a/daily/8/studyOfFace/MTCNN训练步骤.ipynb
+++ b/daily/8/studyOfFace/MTCNN训练步骤.ipynb
@@ -43,7 +43,7 @@
     "    gen_landmark_aug_12.py,根目录下执行:\n",
     "### 输入:\n",
     "\tDATA/lfw_train/ LFW五官数据集\n",
-    "    DATA/lfw_train/trainImageList.txt,人脸的坐标和五官的坐标 \n",
+    "    DATA/lfw_train/trainImageList.txt,人脸的坐标和五官的 绝对 坐标\n",
     "\t格式:\n",
     "\timage1_path left,top,right,bottom,p1.x,p1.y,p2.x,p2.y,p3.x,p3.y,p4.x,p4.y,p5.x,p5.y\n",
     "### 输出:\n",
@@ -136,6 +136,97 @@
     "     baselr:1e-4\n",
     "     lr_decay:0.9,在6,14,20epoch后,lr=lr_before*0.9\n",
     "     optimizer:momentum(0.9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.生成Rnet的Hard Example\n",
+    "### 输入:\n",
+    "    DATA/WIDER_train/wider_face_train_bbx_gt.txt //wider数据集的标注文件\n",
+    "### 输出:\n",
+    "    DATA/no_LM24/positive: Pnet判断正确的正样本,Pnet输出区域与标注IOU>0.65\n",
+    "    DATA/no_LM24/negative::Pnet选出来的-样本,Pnet输出区域与标注IOU<0.3\n",
+    "    DATA/no_LM24/part: ,Pnet输出区域与标注IOU 在[0.4,0.65] 之间\n",
+    "    DATA/no_LM24/RNet/detections.pkl: Pnet对wider数据集检测后的结果保存在detections.pkl,detections是一个list,\n",
+    "    长度与wider数据集图片数量相等,每一个元素list[i]是一个numay array,shape[N',4],表示pnet认为,image[i]中存在N'张人脸,\n",
+    "    分别记录相对于原图人脸定位的坐标(x1,y1,x2,y2),I[i][y1:y2,x1:x2]是一张pnet认为的人脸!\n",
+    "    \n",
+    "    //和标注比较后,得出hardexmaple的标注,注意offsetx1,offsety1,offsetx2,offsety2与上面4个点的区别,这里是相对人脸区域的修正,\n",
+    "    //而不是人脸在原图的坐标!\n",
+    "    DATA/no_LM24/pos_24.txt: 格式-> imgaepath 1 offsetx1,offsety1,offsetx2,offsety2\n",
+    "    DATA/no_LM24/neg_24.txt: 格式-> imgaepath 0\n",
+    "    DATA/no_LM24/part_24.txt:格式-> imgaepath -1 offsetx1,offsety1,offsetx2,offsety2\n",
+    "### 处理过程:\n",
+    "    对于每一张图片,初始缩放比例是I1=(H,W)/min*12,然后在这个比例上面每次缩放0.79,直到图片的尺寸小于12x12位置:\n",
+    "        备注:PNET是一个可以检测12X12的人脸,第一次用Pnet检测>min大小的人脸,然后检测>min/0.79的,然后min/0.79/0.79,\n",
+    "    PNET对于<0.3的区域丢弃,对保留下来的做NMS\n",
+    "    汇集完成所有轮的人脸,在做一次NMS\n",
+    "\n",
+    "### 执行命令:\n",
+    "    python3 prepare_data/gen_hard_example.py\n",
+    "    --test_mode PNet \n",
+    "    --prefix data/MTCNN_model/PNet_No_Landmark/PNet data/MTCNN_model/RNet_No_Landmark/RNet data/MTCNN_model/ONet_No_Landmark/ONet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.生成RNet网络的五官训练数据\n",
+    "    gen_landmark_aug_24.py,根目录下执行:\n",
+    "### 输入:\n",
+    "\tDATA/lfw_train/ LFW五官数据集\n",
+    "    DATA/lfw_train/trainImageList.txt,人脸的坐标和五官的 绝对 坐标\n",
+    "\t格式:\n",
+    "\timage1_path left,top,right,bottom,p1.x,p1.y,p2.x,p2.y,p3.x,p3.y,p4.x,p4.y,p5.x,p5.y\n",
+    "### 输出:\n",
+    "\tDATA/24/train_RNet_landmark_aug:下面经过加强处理的LandMark图片.\n",
+    "\tDATA/24/landmark_Rnet_aug.txt:输出landmark的标注,格式如下:\n",
+    "\t\timage1_path,-2,p1.x,p1.y,p2.x,p2.y,p3.x,p3.y,p4.x,p4.y,p5.x,p5.y\n",
+    "\t备注:图片左上角(0,0),右下角(1,1),W=1,H=1,pi.x,pi,y是相对于左上角的坐标!.\n",
+    "### 处理过程:\n",
+    "    每次读入条记录:\n",
+    "        1.把标注的人脸,五官数据(转化相对人脸) 保存样本\n",
+    "        2.随机平移中心[-0.2,0.2],size[0.8min,1.25max],重复10次,\n",
+    "            所选区域与标注区域 IOU>0.65,认做一个样本\n",
+    "                A)0.5的概率 镜像,并保存\n",
+    "                B)0.5的概率,正向选择,然后镜像\n",
+    "                C)0.5的概率,逆向向选择,然后镜像\n",
+    "        3.把选出的图片,标注 分别 输出到DATA/24/train_RNet_landmark_aug,DATA/24/landmark_Rnet_aug.txt\n",
+    "          备注:如果五官在图片外,landmark<0 or landmark>1,视为无效的,不会输出\n",
+    "    总输出:读取一张,输出 1+10(1+0.5+0.5*2+0.5*2)=36张"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8.合并Rnet的人脸,五官标注数据\n",
+    "\n",
+    "### 输入:\n",
+    "    //人脸标注\n",
+    "    DATA/no_LM24/pos_24.txt: 格式-> imgaepath 1 offsetx1,offsety1,offsetx2,offsety2\n",
+    "    DATA/no_LM24/neg_24.txt: 格式-> imgaepath 0\n",
+    "    DATA/no_LM24/part_24.txt:格式-> imgaepath -1 offsetx1,offsety1,offsetx2,offsety2\n",
+    "    //五官标注\n",
+    "    DATA/24/landmark_Rnet_aug.txt\n",
+    "### 输出:   \n",
+    "    DATA/imglists_noLM/RNet/train_RNet_landmark.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9.Rnet的 TFRecord \n",
+    "\n",
+    "### 输出:\n",
+    "    DATA/imglists_noLM/RNet/pos_landmark.tfrecord_shuffle\n",
+    "    DATA/imglists_noLM/RNet/neg_landmark.tfrecord_shuffle\n",
+    "    DATA/imglists_noLM/RNet/part_landmark.tfrecord_shuffle\n",
+    "    DATA/imglists_noLM/RNet/landmark_landmark.tfrecord_shuffle"
    ]
   },
   {
