--- a/dutyStudy/hadoop/Spark理论基础.ipynb
+++ b/dutyStudy/hadoop/Spark理论基础.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "    1.PARTITION是RDD的基本单位,不同的处理阶段产生了依赖关系的PARTITION,依赖关系体现了SPARK的弹性,并且参与数据的容错恢复.\n",
     "    2.各个PARTITION的处理是并行的,一个PARTITION只能对于一个TASK,由一个核心处理\n",
-    "    3.从一种PARTITION,变成另一种PARTITION的操作称为一个算子!\n"
+    "    3.从一种PARTITION,变成另一种PARTITION的操作称为一个算子!\n",
+    "    4.Partition可以分布在多个节点上"
    ]
   },
   {
