--- a/dutyStudy/hadoop/Spark理论基础.ipynb
+++ b/dutyStudy/hadoop/Spark理论基础.ipynb
@@ -18,6 +18,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## standalone模式下面的Spark执行原理\n",
+    "![ss](images/spark_standalone.png)\n",
+    "\n",
+    "    1.Driver是standalone模式下的 任务 主节点,一个JVM进程\n",
+    "    2.Worker是standalone模式下的 从节点,一个JVM进程\n",
+    "    3.Driver发放任务到worker,汇集worker的计算结果,谨防OOM\n",
+    "    4,master是集群的管理者,汇集集群中的资源(worker信息)\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## standalone集群搭建\n",
+    "    standalone是spark自带的资源调度框架\n",
+    "    \n",
+    "    1.conf/slaves:加入node2,node3,node4\n",
+    "    2.conf/spark-env.sh:修改如下变量\n",
+    "        export SPARK_MASTER_IP=node1\n",
+    "        export SPARK_MASTER_PORT=7077\n",
+    "        export SPARK_WORKER_CORES=2\n",
+    "        export SPARK_WORKER_MEMORY=2g\n",
+    "        export SPARK_MASTER_WEBUI_PORT=8888\n",
+    "        //主MasterIP,port\n",
+    "        //每个worker使用2核心,2G内存\n",
+    "        //web接口是8888\n",
+    "    3.在主master 启动全部节点:\n",
+    "        sbin/start-all.sh\n",
+    "        sbin/stop-all.sh\n",
+    "    4.提交作业\n",
+    "        有2种方式:\n",
+    "        //客户端方式\n",
+    "        bin/spark-submit --master spark://node1:7077 --class main.spark.app.SparkPI myzxk.jar\n",
+    "        //集群方式\n",
+    "        bin/spark-submit --deploy-mode cluster --master spark://node1:7077 --class main.spark.app.SparkPI myzxk.jar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/Standalone-client.jpg)\n",
+    "\n",
+    "## 备注: Driver和worker进行大量的信息交互,汇集worker的计算结果,比如,RDD.collect(),把Work的数据拉到Driver,所有会造成client网络拥堵"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/Standalone-cluster.jpg)\n",
+    "## 集群模式,Driver是在集群中的随机一台机器上启动,所以客户端不会有网络拥堵的压力"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
