--- a/daily/8/studyOfFace/MTCNN训练步骤.ipynb
+++ b/daily/8/studyOfFace/MTCNN训练步骤.ipynb
@@ -163,6 +163,12 @@
     "        备注:PNET是一个可以检测12X12的人脸,第一次用Pnet检测>min大小的人脸,然后检测>min/0.79的,然后min/0.79/0.79,\n",
     "    PNET对于<0.3的区域丢弃,对保留下来的做NMS\n",
     "    汇集完成所有轮的人脸,在做一次NMS\n",
+    "    备注:\n",
+    "        \n",
+    "        第一次NMS:iou>0.5的被淘汰\n",
+    "        第二次NMS:iou>0.7的被淘汰\n",
+    "        thresold:0.3,小于0.3的淘汰\n",
+    "        scaleImageFactor:0.79\n",
     "\n",
     "### 执行命令:\n",
     "    python3 prepare_data/gen_hard_example.py\n",
@@ -262,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -307,7 +315,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model_path=model_path[0]"
@@ -316,7 +326,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -336,7 +348,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
