--- a/dutyStudy/hadoop/Spark理论基础.ipynb
+++ b/dutyStudy/hadoop/Spark理论基础.ipynb
@@ -53,6 +53,7 @@
     "    3.在主master 启动全部节点:\n",
     "        sbin/start-all.sh\n",
     "        sbin/stop-all.sh\n",
+    "        http://node1:8888\n",
     "    4.提交作业\n",
     "        有2种方式:\n",
     "        //客户端方式,你的客户端就是driver!\n",
@@ -60,7 +61,8 @@
     "        //集群方式,集群中一个worker被认为是driver\n",
     "        bin/spark-submit --deploy-mode cluster --master spark://node1:7077 --class main.spark.app.SparkPI myzxk.jar\n",
     "        \n",
-    "        (org.apache.spark.examples.SparkPi)"
+    "        (org.apache.spark.examples.SparkPi)\n",
+    "        $SPARK_HOME/bin/spark-submit --master spark://node1:7077 --class org.apache.spark.examples.SparkPi $SPARK_HOME/lib/spark-examples-1.6.0-hadoop2.6.0.jar"
    ]
   },
   {
@@ -89,7 +91,9 @@
     "## 基于yarn资源调度管理\n",
     "\n",
     "    A.集群配置\n",
-    "        conf/spark-env.sh  或者/conf/spark-default.conf:修改如下变量\n",
+    "    注意这里是新文件,要把之前配置standalone的删除!!!\n",
+    "    \n",
+    "        conf/spark-env.sh  或者/conf/spark-default.conf:修改如下变量,\n",
     "        HADOOP_CONF_DIR=HADOOP_HOME/etc/hadoop\n",
     "    B.yarn资源调度处理任务的流程\n",
     "        回顾下map-reduce,yarn调度:\n",
@@ -110,18 +114,10 @@
     "    D.yarn-cluster的执行:\n",
     "        与yarn-client的区别,client不再是driver,applicationMaster=driver\n",
     "        命令:bin/spark-submit --master yarn --deploy-mode cluster --class main.spark.app.SparkPI myzxk.jar\n",
+    "    E.在node1:8088/任务的history 下面的logs看结果\n",
     "  ![ss](images/Yarn-client模式提交任务.jpg)\n",
     "  ![ss](images/Yarn-cluster模式提交任务.jpg)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
