--- a/dutyStudy/hadoop/Yarn资源管理任务调度.ipynb
+++ b/dutyStudy/hadoop/Yarn资源管理任务调度.ipynb
@@ -90,7 +90,17 @@
     "    <property>\n",
     "        <name>yarn.resourcemanager.zk-address</name>\n",
     "        <value>node2:2181,node3:2181,node4:2181</value>\n",
-    "    </property>\n"
+    "    </property>\n",
+    "\n",
+    "    <!--使用jdk1.8的时候要加入如下,不然浪费时间-->\n",
+    "    <property>\n",
+    "    <name>yarn.nodemanager.pmem-check-enabled</name>\n",
+    "    <value>false</value>\n",
+    "</property>\n",
+    "<property>\n",
+    "    <name>yarn.nodemanager.vmem-check-enabled</name>\n",
+    "    <value>false</value>\n",
+    "</property>"
    ]
   },
   {
@@ -107,16 +117,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "      3.启动yarn,start-yarn.sh\n",
+    "        yarn-daemon.sh --config /root/mybigdata/hadoop-2.6.5/etc/hadoop  start resourcemanager 单独启动RS\n",
+    "        yarn-daemon.sh start resourcemanager //也可以不指定config\n",
+    "    http://node1:8088/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "3.启动yarn,start-yarn.sh\n",
-    "http://node1:8088/"
-   ]
+   "source": []
   }
  ],
  "metadata": {
