--- a/dutyStudy/hadoop/CDH搭建环境.ipynb
+++ b/dutyStudy/hadoop/CDH搭建环境.ipynb
@@ -21,7 +21,7 @@
     "    4.安装JDK\n",
     "    5.安装NTP\n",
     "         yum -y install ntp\n",
-    "         chkconfig ntp on\n",
+    "         chkconfig ntpd on\n",
     "         ntpdate ntp1.aliyun.com  //修改时间服务器地址\n",
     "    6.安装配置mysql\n",
     "         yum -y install mysql-server\n",
