--- a/dutyStudy/hadoop/Spark理论基础.ipynb
+++ b/dutyStudy/hadoop/Spark理论基础.ipynb
@@ -118,6 +118,52 @@
     "  ![ss](images/Yarn-client模式提交任务.jpg)\n",
     "  ![ss](images/Yarn-cluster模式提交任务.jpg)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RDD的宽窄模式\n",
+    "![ss](images/RDD的宽窄依赖.jpg)\n",
+    "\n",
+    "        SPARK依据宽依赖把JOB划分成多个stage,stages组成DAG,每个stage由于操作RDD有partiion,所有可以划分成多个tasks,task是driver交给worker的\n",
+    "        executor执行的基本单位, 换言之,有了partiion,所有有了并行管道执行,任务分为各个部分(STAGE)->>DAG,执行需要顺序!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 资源调度与任务调度(代码层)\n",
+    "![ss](images/Spark资源调度和任务调度.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    1.SparkContext是客户端创建的,SparkContext=DAGScheduler+TaskScheduler\n",
+    "    2.TaskScheduler主要是资源调度,DAGScheduler任务调度\n",
+    "    3.spark集群什么都不知道,只知道完成TaskScheduler发来的一个一个TASK,只有客户端知道要执行任务的\"全部面貌\",\n",
+    "    DAGScheduler把任务划分为不同stage,按照顺序执行DAG\n",
+    "    \n",
+    "    4.SPARK的任务调度: 粗力度:\n",
+    "        A).APPLICATION启动前,计算好需要的全部tasks的全部资源,在sparkconf已经配置好了,给clusterManager(standalone|yarn),资源一旦满足,马上执行任务\n",
+    "        B).直到所有task执行完毕后,才释放资源, 如果不是所有TASK完成,那就 \"有借不还了\"\n",
+    "    5.MR细调度: 任务调来:\n",
+    "        APP-MASTER在节点创建TASKMANAGER,TASKMANAGER复制一个TASK的执行,执行完成就释放\n",
+    "        C)对比:MR 调度过于琐碎,但是资源利用充分,SPARK集中资源调度,资源回收,可以达到加速计算的效果,但是由于统一管理\n",
+    "        原因,可能会造成资源被过度占用的浪费!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
