--- a/daily/8/DeepLearning/project/nmt/阅读代码的问题.ipynb
+++ b/daily/8/DeepLearning/project/nmt/阅读代码的问题.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-90fa55a1f917>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-90fa55a1f917>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    https://github.com/google/sentencepiece\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "https://github.com/google/sentencepiece\n",
+    "tf.contrib.lookup.index_table_from_file\n",
+    "tf.gfile.Glob\n",
+    "tf.data.TextLineDataset\n",
+    "\n",
+    "tf.data.Dataset.zip\n",
+    "tf.data.Dataset.shard\n",
+    "tf.data.Dataset.shuffle\n",
+    "tf.data.Dataset.map\n",
+    "tf.data.Dataset.filter\n",
+    "tf.data.Dataset.from_tensor_slices\n",
+    "tf.contrib.seq2seq.tile_batch\n",
+    "tf.contrib.rnn.BasicLSTMCell\n",
+    "\n",
+    "tf.string.split\n",
+    "tf.slice\n",
+    "tf.layer.Dense\n",
+    "tf.nn.dymatic.rnn\n",
+    "tf.nn.bidirection_dymatic_rnn\n",
+    "\n",
+    "tf.contrib.seq2seq.BaseDecoder\n",
+    "tf.contrib.seq2seq.BeamSearchDecoder\n",
+    "tf.contrib.seq2seq.BeamSearchDecoderOutput\n",
+    "tf.contrib.seq2seq.BeamSearchDecoderState\n",
+    "\n",
+    "\n",
+    "tf.contrib.seq2seq.TrainHelper\n",
+    "tf.contrib.seq2seq.GreedEmbeddingHelper\n",
+    "tf.contrib.seq2seq.SampleEmbeddingHelper\n",
+    "tf.contrib.seq2seq.dynamic_decoder\n",
+    "\n",
+    "tf.contrib.rnn.BasicLSTMCell\n",
+    "tf.contrib.rnn.DropoutWrapper\n",
+    "tf.contrib.rnn.MultiRNNCell\n",
+    "\n",
+    "tf.Summary\n",
+    "tf.Summary.Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -154,13 +210,13 @@
     "tgt_dataset=tf.data.TextLineDataset('/home/zhangxk/AIProject/nmt/nmt/scripts/iwsl515/train.vi')\n",
     "src_vocab_table=tf.contrib.lookup.index_table_from_file('/home/zhangxk/AIProject/nmt/nmt/scripts/iwsl515/vocab.en')\n",
     "tgt_vocab_table=tf.contrib.lookup.index_table_from_file('/home/zhangxk/AIProject/nmt/nmt/scripts/iwsl515/vocab.vi')\n",
-    "batch_size=3\n",
+    "batch_size=9\n",
     "sos,eos='<sos>','<eos>'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -183,11 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"IteratorGetNext_1:0\", shape=(?, ?), dtype=string)\n",
+      "Tensor(\"IteratorGetNext_1:1\", shape=(?, ?), dtype=string)\n",
+      "Tensor(\"IteratorGetNext_1:3\", shape=(?,), dtype=int32)\n"
+     ]
+    }
+   ],
    "source": [
     "print(batchinput.source)\n",
     "print(batchinput.target_input)\n",
@@ -196,11 +262,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9, 50)\n",
+      "(9, 77)\n",
+      "(9, 77)\n",
+      "[ 9 50 27 31 13 31 11 10 18]\n",
+      "[11 77 31 31 19 39 17 11 25]\n",
+      "xxxxxxxxx\n",
+      "(9, 44)\n",
+      "(9, 62)\n",
+      "(9, 62)\n",
+      "[29 12 23 44 43 30 22 29 17]\n",
+      "[37 19 26 62 51 35 21 32 17]\n",
+      "xxxxxxxxx\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "#     sess.run(tf.global_variables_initializer())\n",
@@ -222,11 +307,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 31)\n",
+      "(3, 39)\n",
+      "(3, 39)\n",
+      "[31 13 31]\n",
+      "[31 19 39]\n"
+     ]
+    }
+   ],
    "source": [
     "print(x[0].shape)\n",
     "print(x[1].shape)\n",
@@ -316,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -340,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -361,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -408,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -419,10 +516,14 @@
        "[<tf.Variable 'bi/bidirectional_rnn/fw/multi_rnn_cell/cell_0/basic_lstm_cell/kernel:0' shape=(96, 128) dtype=float32_ref>,\n",
        " <tf.Variable 'bi/bidirectional_rnn/fw/multi_rnn_cell/cell_0/basic_lstm_cell/bias:0' shape=(128,) dtype=float32_ref>,\n",
        " <tf.Variable 'bi/bidirectional_rnn/fw/multi_rnn_cell/cell_1/basic_lstm_cell/kernel:0' shape=(96, 256) dtype=float32_ref>,\n",
-       " <tf.Variable 'bi/bidirectional_rnn/fw/multi_rnn_cell/cell_1/basic_lstm_cell/bias:0' shape=(256,) dtype=float32_ref>]"
+       " <tf.Variable 'bi/bidirectional_rnn/fw/multi_rnn_cell/cell_1/basic_lstm_cell/bias:0' shape=(256,) dtype=float32_ref>,\n",
+       " <tf.Variable 'bi/bidirectional_rnn/bw/multi_rnn_cell/cell_0/basic_lstm_cell/kernel:0' shape=(96, 128) dtype=float32_ref>,\n",
+       " <tf.Variable 'bi/bidirectional_rnn/bw/multi_rnn_cell/cell_0/basic_lstm_cell/bias:0' shape=(128,) dtype=float32_ref>,\n",
+       " <tf.Variable 'bi/bidirectional_rnn/bw/multi_rnn_cell/cell_1/basic_lstm_cell/kernel:0' shape=(96, 256) dtype=float32_ref>,\n",
+       " <tf.Variable 'bi/bidirectional_rnn/bw/multi_rnn_cell/cell_1/basic_lstm_cell/bias:0' shape=(256,) dtype=float32_ref>]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,6 +556,350 @@
     "print(s)\n",
     "c=tf.contrib.seq2seq.tile_batch((s,h),3)\n",
     "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tensorflow.contrib.seq2seq.python.ops.helper.TrainingHelper object at 0x7fc31c584eb8>\n",
+      "<tensorflow.contrib.seq2seq.python.ops.basic_decoder.BasicDecoder object at 0x7fc31d7d43c8>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#decoder\n",
+    "tf.reset_default_graph()\n",
+    "BATCH,T,D=22,10,17\n",
+    "X=tf.placeholder(dtype=tf.float32,shape=[BATCH,T,D])\n",
+    "X_len=tf.placeholder(dtype=tf.int32,shape=[BATCH])\n",
+    "with tf.variable_scope('decoder'):\n",
+    "    dims=[32,64]\n",
+    "    cells=[tf.contrib.rnn.BasicLSTMCell(d) for d in dims]\n",
+    "    decode_cell=tf.contrib.rnn.MultiRNNCell(cells)\n",
+    "    decode_init_state=decode_cell.zero_state(BATCH,tf.float32)\n",
+    "    #decoder network\n",
+    "    helper=tf.contrib.seq2seq.TrainingHelper(X,X_len)\n",
+    "    print(helper)\n",
+    "    mydecoder=tf.contrib.seq2seq.BasicDecoder(decode_cell,helper,decode_init_state)\n",
+    "    print(mydecoder)\n",
+    "    final_outputs, final_state, final_sequence_lengths=tf.contrib.seq2seq.dynamic_decode(mydecoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BasicDecoderOutput(rnn_output=<tf.Tensor 'decoder/decoder/transpose:0' shape=(22, ?, 64) dtype=float32>, sample_id=<tf.Tensor 'decoder/decoder/transpose_1:0' shape=(22, ?) dtype=int32>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(LSTMStateTuple(c=<tf.Tensor 'decoder/decoder/while/Exit_3:0' shape=(22, 32) dtype=float32>, h=<tf.Tensor 'decoder/decoder/while/Exit_4:0' shape=(22, 32) dtype=float32>), LSTMStateTuple(c=<tf.Tensor 'decoder/decoder/while/Exit_5:0' shape=(22, 64) dtype=float32>, h=<tf.Tensor 'decoder/decoder/while/Exit_6:0' shape=(22, 64) dtype=float32>))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"decoder/decoder/while/Exit_9:0\", shape=(22,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_sequence_lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-15-61562cd14232>:13: BasicLSTMCell.__init__ (from tensorflow.python.ops.rnn_cell_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This class is deprecated, please use tf.nn.rnn_cell.LSTMCell, which supports all the feature this cell currently has. Please replace the existing code with tf.nn.rnn_cell.LSTMCell(name='basic_lstm_cell').\n"
+     ]
+    }
+   ],
+   "source": [
+    "#inference,sample and greed\n",
+    "tf.reset_default_graph()\n",
+    "BATCH,D=22,17\n",
+    "X=tf.placeholder(dtype=tf.float32,shape=[BATCH,D])\n",
+    "X_len=tf.placeholder(dtype=tf.int32,shape=[BATCH])\n",
+    "\n",
+    "embeding=tf.constant(dtype=tf.float32,shape=[10000,67],value=1.0)\n",
+    "sos=tf.constant(0,shape=[BATCH])\n",
+    "eos=tf.constant(1,shape=[])\n",
+    "\n",
+    "with tf.variable_scope('decoder'):\n",
+    "    dims=[32,64]\n",
+    "    cells=[tf.contrib.rnn.BasicLSTMCell(d) for d in dims]\n",
+    "    decode_cell=tf.contrib.rnn.MultiRNNCell(cells)\n",
+    "    decode_init_state=decode_cell.zero_state(BATCH,tf.float32)\n",
+    "    \n",
+    "#     helper=tf.contrib.seq2seq.GreedyEmbeddingHelper(embeding,sos,eos)\n",
+    "    helper=tf.contrib.seq2seq.SampleEmbeddingHelper(embeding,sos,eos,softmax_temperature=1.0)\n",
+    "    decoder=tf.contrib.seq2seq.BasicDecoder(decode_cell,helper,decode_init_state)\n",
+    "    final_output,final_state,final_len=tf.contrib.seq2seq.dynamic_decode(decoder,maximum_iterations=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BasicDecoderOutput(rnn_output=<tf.Tensor 'decoder/decoder/transpose:0' shape=(22, ?, 64) dtype=float32>, sample_id=<tf.Tensor 'decoder/decoder/transpose_1:0' shape=(22, ?) dtype=int32>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#inference beam search!\n",
+    "tf.reset_default_graph()\n",
+    "BATCH,D=22,17\n",
+    "BW=3\n",
+    "X=tf.placeholder(dtype=tf.float32,shape=[BATCH,D])\n",
+    "X_len=tf.placeholder(dtype=tf.int32,shape=[BATCH])\n",
+    "sos=tf.constant(0,shape=[BATCH])\n",
+    "eos=tf.constant(1,shape=[])\n",
+    "embeding=tf.constant(dtype=tf.float32,shape=[10000,67],value=1.0)\n",
+    "\n",
+    "with tf.variable_scope('decoder'):\n",
+    "    dims=[32,64]\n",
+    "    cells=[tf.contrib.rnn.BasicLSTMCell(d) for d in dims]\n",
+    "    decode_cell=tf.contrib.rnn.MultiRNNCell(cells)\n",
+    "    decode_init_state=decode_cell.zero_state(BATCH,tf.float32)\n",
+    "    decode_init_state=tf.contrib.seq2seq.tile_batch(decode_init_state,BW)\n",
+    "    decoder=tf.contrib.seq2seq.BeamSearchDecoder(decode_cell,embeding,sos,eos,decode_init_state,BW)\n",
+    "    final_output,final_state,final_len=tf.contrib.seq2seq.dynamic_decode(decoder,maximum_iterations=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"decoder/decoder/while/Exit_14:0\", shape=(22, 3), dtype=int32)\n",
+      "BeamSearchDecoderState(cell_state=(LSTMStateTuple(c=<tf.Tensor 'decoder/decoder/while/Exit_5:0' shape=(22, 3, 32) dtype=float32>, h=<tf.Tensor 'decoder/decoder/while/Exit_6:0' shape=(22, 3, 32) dtype=float32>), LSTMStateTuple(c=<tf.Tensor 'decoder/decoder/while/Exit_7:0' shape=(22, 3, 64) dtype=float32>, h=<tf.Tensor 'decoder/decoder/while/Exit_8:0' shape=(22, 3, 64) dtype=float32>)), log_probs=<tf.Tensor 'decoder/decoder/while/Exit_9:0' shape=(22, 3) dtype=float32>, finished=<tf.Tensor 'decoder/decoder/while/Exit_10:0' shape=(22, 3) dtype=bool>, lengths=<tf.Tensor 'decoder/decoder/while/Exit_11:0' shape=(22, 3) dtype=int64>, accumulated_attention_probs=())\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_len)\n",
+    "print(final_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FinalBeamSearchDecoderOutput(predicted_ids=<tf.Tensor 'decoder/decoder/transpose:0' shape=(22, ?, 3) dtype=int32>, beam_search_decoder_output=BeamSearchDecoderOutput(scores=<tf.Tensor 'decoder/decoder/transpose_1:0' shape=(22, ?, 3) dtype=float32>, predicted_ids=<tf.Tensor 'decoder/decoder/transpose_2:0' shape=(22, ?, 3) dtype=int32>, parent_ids=<tf.Tensor 'decoder/decoder/transpose_3:0' shape=(22, ?, 3) dtype=int32>))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(LSTMStateTuple(c=<tf.Tensor 'decoder/decoder/while/Exit_5:0' shape=(22, 3, 32) dtype=float32>, h=<tf.Tensor 'decoder/decoder/while/Exit_6:0' shape=(22, 3, 32) dtype=float32>),\n",
+       " LSTMStateTuple(c=<tf.Tensor 'decoder/decoder/while/Exit_7:0' shape=(22, 3, 64) dtype=float32>, h=<tf.Tensor 'decoder/decoder/while/Exit_8:0' shape=(22, 3, 64) dtype=float32>))"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_state.cell_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_output.predicted_ids.shape[0].value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.sequence_mask()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#graph\n",
+    "\n",
+    "def common_network(X):\n",
+    "    with tf.variable_scope('mynn',reuse=tf.AUTO_REUSE):\n",
+    "        W=tf.get_variable('W',shape=(),dtype=tf.float32,initializer=tf.constant_initializer(3.0))\n",
+    "    return X*W\n",
+    "def train_net():\n",
+    "    X=tf.constant(12.0,name='train_X')\n",
+    "    return common_network(X)\n",
+    "def infer_net():\n",
+    "    X=tf.constant(10.0,name='infer_X')\n",
+    "    return common_network(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<tf.Variable 'mynn/W:0' shape=() dtype=float32_ref>]\n",
+      "36.0\n",
+      "[<tf.Variable 'mynn/W:0' shape=() dtype=float32_ref>]\n",
+      "30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "g1=tf.Graph()\n",
+    "with g1.as_default():\n",
+    "    Y_train=train_net()\n",
+    "    print(tf.trainable_variables())\n",
+    "    sess1=tf.Session()\n",
+    "    sess1.run(tf.global_variables_initializer())\n",
+    "    print(sess1.run(Y_train))\n",
+    "g2=tf.Graph()\n",
+    "with g2.as_default():\n",
+    "    Y_infer=infer_net()\n",
+    "    print(tf.trainable_variables())\n",
+    "    sess2=tf.Session()\n",
+    "    sess2.run(tf.global_variables_initializer())\n",
+    "    print(sess2.run(Y_infer))\n",
+    "# Y_infer=infer_net()\n",
+    "\n",
+    "# sess1=tf.Session(graph=g1)\n",
+    "# # sess2=tf.Session()\n",
+    "# sess1.run(tf.global_variables_initializer())\n",
+    "# print(sess1.run(Y_train))\n",
+    "# print(sess1.run(Y_infer))\n",
+    "\n",
+    "# sess2.run(tf.global_variables_initializer())\n",
+    "# print(sess2.run(Y_train))\n",
+    "# print(sess2.run(Y_infer))"
    ]
   },
   {
