--- a/daily/8/tensorflow_turtorial.ipynb
+++ b/daily/8/tensorflow_turtorial.ipynb
@@ -116,6 +116,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### problem 1_2 deal with checkpoint\n",
+    "    1.checkpoint only save parameters weights,using tf.train.get_checkpoint_state() check the state of checkpoints\n",
+    "    state..all_model_checkpoint_paths保存了所有的checkpoint路径\n",
+    "    2.使用tf.contrib.framework.list_variables()可以查看变量name和shape\n",
+    "    3.使用tf.contrib.framework.load_checkpoint()=reader可以得到一个文件的读取"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/home/zhangxk/AIProject/MTCNN_TRAIN/pnet/model/PNet-11']\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "checkpoint_path='/home/zhangxk/AIProject/MTCNN_TRAIN/pnet/model'\n",
+    "ckstate=tf.train.get_checkpoint_state(checkpoint_path)\n",
+    "model_paths=ckstate.all_model_checkpoint_paths\n",
+    "print(model_paths)\n",
+    "varlist=tf.contrib.framework.list_variables(model_paths[0])\n",
+    "var_shape={x[0]:x[1] for x in varlist}\n",
+    "var_values={}\n",
+    "for p in model_paths:\n",
+    "    reader=tf.contrib.framework.load_checkpoint(p)\n",
+    "    for varname,varshape in var_shape.items():\n",
+    "        var_values[varname]=reader.get_tensor(varname)\n",
+    "#这个可以创建变量\n",
+    "varlist=[tf.get_variable(varname,varshape) for varname,varshape in var_shape.items()]\n",
+    "placeholders=[tf.placeholder(v.dtype,v.shape) for v in varlist]\n",
+    "assign_ops=[tf.assign(a,b) for a,b in zip(varlist,placeholders)]\n",
+    "\n",
+    "for assign_op,X in zioassign_ops\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# problem2:how to remove trainable variable"
    ]
   },
