--- a/daily/8/DeepLearning/project/nmt/阅读代码的问题.ipynb
+++ b/daily/8/DeepLearning/project/nmt/阅读代码的问题.ipynb
@@ -31,6 +31,8 @@
    ],
    "source": [
     "https://github.com/google/sentencepiece\n",
+    "tf.split\n",
+    "tf.contrib.framework.nest.\n",
     "tf.contrib.lookup.index_table_from_file\n",
     "tf.gfile.Glob\n",
     "tf.data.TextLineDataset\n",
@@ -910,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -919,19 +921,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Const:0\", shape=(22, 10, 9), dtype=float32)\n",
-      "<tensorflow.contrib.seq2seq.python.ops.attention_wrapper.AttentionWrapper object at 0x7f6f19f19c18>\n"
+      "<tensorflow.contrib.seq2seq.python.ops.attention_wrapper.AttentionWrapper object at 0x7fdea8949898>\n"
      ]
     }
    ],
    "source": [
     "#attention\n",
     "tf.reset_default_graph()\n",
-    "BATCH,T=22,10\n",
+    "BATCH,T=22,15\n",
+    "T1=11\n",
     "embed_size=122\n",
     "#这里没有定义encoder,假设encoder的输出是encoder_size,\n",
     "encoder_size=9\n",
-    "memory=tf.constant(1.0,shape=[BATCH,T,encoder_size],dtype=tf.float32)\n",
+    "memory=tf.constant(1.0,shape=[BATCH,T1,encoder_size],dtype=tf.float32)\n",
     "X=tf.placeholder(dtype=tf.float32,shape=[BATCH,T,embed_size])\n",
     "X_len=tf.placeholder(dtype=tf.int32,shape=[BATCH])\n",
     "dims=[128,256]\n",
@@ -953,8 +955,8 @@
     "# query=tf.constant(1.0,shape=[BATCH,attention_depth])\n",
     "# attention_mechanism(query,init_atten)\n",
     "cells=tf.contrib.seq2seq.AttentionWrapper(cells,attention_mechanism,\n",
-    "                                    attention_layer_size=attention_depth,\n",
-    "                                    alignment_history=False,\n",
+    "                                    attention_layer_size=None,\n",
+    "                                    alignment_history=True,\n",
     "                                    output_attention=True)\n",
     "print(cells)\n",
     "initial_state=cells.zero_state(BATCH,tf.float32)\n",
@@ -966,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -975,13 +977,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BasicDecoderOutput(rnn_output=<tf.Tensor 'decoder/transpose:0' shape=(22, ?, 256) dtype=float32>, sample_id=<tf.Tensor 'decoder/transpose_1:0' shape=(22, ?) dtype=int32>)\n"
+      "BasicDecoderOutput(rnn_output=<tf.Tensor 'decoder/transpose:0' shape=(22, ?, 9) dtype=float32>, sample_id=<tf.Tensor 'decoder/transpose_1:0' shape=(22, ?) dtype=int32>)\n",
+      "AttentionWrapperState(cell_state=(<tf.Tensor 'decoder/while/Exit_3:0' shape=(22, 128) dtype=float32>, <tf.Tensor 'decoder/while/Exit_4:0' shape=(22, 256) dtype=float32>), attention=<tf.Tensor 'decoder/while/Exit_5:0' shape=(22, 9) dtype=float32>, time=<tf.Tensor 'decoder/while/Exit_6:0' shape=() dtype=int32>, alignments=<tf.Tensor 'decoder/while/Exit_7:0' shape=(22, 11) dtype=float32>, alignment_history=<tensorflow.python.ops.tensor_array_ops.TensorArray object at 0x7fdea86cbac8>, attention_state=<tf.Tensor 'decoder/while/Exit_9:0' shape=(22, 11) dtype=float32>)\n"
      ]
     }
    ],
    "source": [
     "print(rnn_output[0])\n",
-    "# print(final_state)"
+    "print(rnn_output[1])\n",
+    "# for  v in tf.trainable_variables():\n",
+    "#     print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"TensorArrayStack_1/TensorArrayGatherV3:0\", shape=(?, 22, 11), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "attention_images = (rnn_output[1].alignment_history.stack())\n",
+    "print(attention_images)"
    ]
   },
   {
@@ -1001,6 +1026,68 @@
    ],
    "source": [
     "print(rnn_output[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#tf.contrib.framework.nest.map_structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "N,D1,D2,D3=128,31,64,96\n",
+    "X1=tf.constant(value=1.0,shape=[N,D1])\n",
+    "X2=tf.constant(value=1.0,shape=[N,D2])\n",
+    "X3=tf.constant(value=1.0,shape=[N,D3])\n",
+    "def func(X1,X2,X3):\n",
+    "    D1=X1.get_shape().as_list()[-1]\n",
+    "    D2=X2.get_shape().as_list()[-1]\n",
+    "    return tf.split(X2,[D1,D2-D1],axis=-1)\n",
+    "NEWX2,_=tf.contrib.framework.nest.map_structure(func,X1,X2,X3)\n",
+    "NEWX2.get_shape().assert_is_compatible_with(X1.get_shape())\n",
+    "tf.contrib.framework.nest.assert_same_structure(X1,X1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.contrib.framework.nest.assert_same_structure(X1,X3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ss)"
    ]
   },
   {
